--- a/blackhole/src/index.css
+++ b/blackhole/src/index.css
@@ -193,6 +193,25 @@ textarea {
   color: white;
 }
 
+.gone {
+  animation: yolo 3s;
+}
+
+@keyframes yolo {
+  0% {
+    transform: scale(1) rotate3d(-1, -1, -1, 0deg);
+  }
+
+  50% {
+    transform: scale(2) rotate3d(1, 1, 1, 3600deg);
+  }
+
+  100% {
+    /* transform: rotate3d(1, 1, 1, 3600deg); */
+    transform: scale(0);
+  }
+}
+
 
 .select-box {
   display: flex;
