Completed storage functionality and registration

--- a/blackhole/src/index.css
+++ b/blackhole/src/index.css
@@ -290,6 +290,11 @@ select:hover {
   background: rgba(42, 42, 42, 0.5);
 }
 
+
+h5 {
+  margin-top: 50px;
+}
+
 .single-btn {
   display: flex;
   justify-content: space-evenly;
