fixed displaying navbars when logged in vs logged out

--- a/blackhole/src/index.css
+++ b/blackhole/src/index.css
@@ -25,6 +25,14 @@ p {
 
 /* Nav Bar Styling */
 
+.none {
+  display: none;
+}
+
+.displayed {
+  padding-left: 20px;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
